Update 0.0.3 - Backend logic updated.

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -11,7 +11,7 @@
             <div class="ui container">
                 <div class="header item">FuelQuote</div>
                 <div class="right menu">
-                    <a href="/logout" class="item">Logout</a>
+                    <a href="/clients/login" class="item">Logout</a>
                 </div>
             </div>
         </div>
