--- a/views/login.ejs
+++ b/views/login.ejs
@@ -2,15 +2,15 @@
 
 <div class="ui main text container segment" id="container">
     <div class="ui huge header" style="text-align: center;">LOG IN</div>
-    <form class="ui form" action="/login" method="POST">
+    <form class="ui form" action="/clients/login" method="POST">
         <div class="field">
-            <input type="text" name="username" placeholder="Userame">
+            <input type="text" name="username" placeholder="Username">
         </div>
         <div class="field">
             <input type="password" name="password" placeholder="Password" required>
         </div>
         <button type="text" class="ui green inverted button">Submit</button>
-        <a href="/register" class="ui blue inverted button">Register</a>
+        <a href="/" class="ui red inverted button">Cancel</a>
     </form>
 </div>
 
