--- a/views/home.ejs
+++ b/views/home.ejs
@@ -2,13 +2,12 @@
 
 <div class="ui container segment" id="container">
     <div class="ui first huge header" style="text-align: center;">
-        Welcome!
+        Welcome <%=client.username%>!
     </div>
 </div>
 
 <div class="ui main text container segment">
     <div class="ui huge header" style="text-align: center;">Get A Quote</div>
-    
 </div>
 
 <% include partials/footer %>
