--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,8 +1,8 @@
-<% include partials/headerlogin %>
+<% include partials/header %>
 
 <div class="ui main text container segment" id="container">
     <div class="ui huge header" style="text-align: center;">LOG IN</div>
-    <form class="ui form" action="/clients/login" method="POST">
+    <form class="ui form" action="/login" method="POST">
         <div class="field">
             <input type="text" name="username" placeholder="Username">
         </div>
