Update 0.0.8 - Quote history module updated.

--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -1,5 +1,7 @@
 #container { margin-top: 10em; }
 
+#qhcontainer { margin-top: 5em; }
+
 #welcome { margin-top: 3em; }
 
 #mymodal { padding: 3em; }
