--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -14,7 +14,7 @@
     <body>
         <div class="ui fixed inverted menu">
             <div class="ui container">
-                <div class="header item"><i class="quote left icon"></i> FuelQuote <i class="quote right icon"></i></div>
+                <a href="/clients/home" class="header item"><i class="quote left icon"></i> FuelQuote <i class="quote right icon"></i></a>
                 <%if(currentUser && currentUser.newAcc === false) {%>
                     <div class="right menu">
                         <a class="item"><i class="user circle icon"></i><%=currentUser.username%></a>
