Update 0.0.8 - Updated back-end logic.

--- a/views/getaquote.ejs
+++ b/views/getaquote.ejs
@@ -28,7 +28,7 @@
       <div class="fields">
           <div class="eight wide field">
               <label for="quote[suggested]">Suggested Price Per Gallon</label>
-              <input type="text" name="quote[suggested]" id="suggprice" placeholder="0" readonly required></p>
+              <input type="text" name="quote[suggested]" id="suggprice" placeholder="0" readonly required>
           </div> 
           <div class="eight wide field">
               <label for="quote[total]">Total Amount</label>
