--- a/views/getaquote.ejs
+++ b/views/getaquote.ejs
@@ -1,17 +1,17 @@
 <% include partials/header %>
-    <%# FUEL PRICE MODAL %>
+<%# FUEL PRICE MODAL %>
 <div class="ui main text container segment" id="container">
   <div class="ui huge header" style="text-align: center;">My Quote</div>
     <form class="ui form" action="/clients/home/getaquote" method="POST" autocomplete="off">
       <%# QUANTITY OF FUEL IN GALLONS %>
       <div class="field">
           <label for="quote[gallons]">Quantity In Gallons</label>
-          <input type="number" name="quote[gallons]" placeholder="0" required>
+          <input type="number" name="quote[gallons]" placeholder="0" id="gallons" required>
       </div>
       <%# ADDRESS - PROFILE %>
       <div class="field">
           <label for="quote[address]">Delivery Address</label>
-          <input type="text" name="quote[address]" value="<%=client.address%>" readonly>
+          <input type="text" name="quote[address]" value="<%=client.address.street%>, <%=client.address.city%>, <%=client.address.state%>, <%=client.address.zipcode%>" id="address" readonly>
       </div>
       <%# DELIVERY DATE + DATE PICKER API %>
       <div class="fields">
@@ -36,9 +36,10 @@
           </div>
       </div>
       <%# BUTTONS %>
-      <button type="submit" class="ui green inverted button">Submit</button>
-      <button class="ui blue inverted button">Calculate</button>
+      <button type="submit" class="ui green inverted button" id="saveQuote" disabled>Save</button>
+      <button type="button" onclick="getSuggestedPrice('TX', 7, true, 1000)" class="ui blue inverted button" id="calculatePrice">Calculate</button>
       <a href="/clients/home" class="ui red inverted button">Cancel</a>
     </form>
 </div>
+
 <% include partials/footer %>
