--- a/views/manage.ejs
+++ b/views/manage.ejs
@@ -13,7 +13,7 @@
                 <input type="text" name="registerfirstname" placeholder="First Name" maxlength="25" required>
             </div>
             <div class="field">
-                <input type="text" name="registerlastname" placeholder="Last Name" maxlength="25" required>
+                <input type="text" name="registerlastname" placeholder="Last Name" minlength="5" maxlength="25" required>
             </div>
         </div>
         <%# Home Address %>
