--- a/views/quotedetails.ejs
+++ b/views/quotedetails.ejs
@@ -37,7 +37,7 @@
         </div>
         <%# BUTTONS %>
         <button type="submit" class="ui green inverted button">Save</button>
-        <a href="/clients/home/getaquote" class="ui yellow inverted button">Edit</a>
+        <a href="/clients/home" class="ui yellow inverted button">Edit</a>
     </form>
 </div>
 
