--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,4 +1,9 @@
-        <script>$('.message .close').on('click', function() { $(this).parent().hide();});</script>
+        <script>$('.message .close').on('click', function() { $(this).parent().hide(); });</script>
+        <script>
+            function showTAC() {
+                $('.ui.modal').modal('show');
+            }
+        </script>
         <script>$(function() { $( "#datepicker" ).datepicker(); });</script>
         <script>
             let date = new Date();
